i don't remember + update gitignore

--- a/beamerfontthemeinthenew.sty
+++ b/beamerfontthemeinthenew.sty
@@ -6,20 +6,20 @@
 
 \setmainfont[
 Extension=.ttf,
-UprightFont=*-Regular,
-%BoldFont=*-Bold,
+%UprightFont=*-Regular,
+BoldFont=*-Bold,
 %ItalicFont=*-MI,
 %Mapping=tex-text
-]{Montserrat}
+]{DejaVuSans}
 
 \setsansfont[
  Extension=.ttf,
- UprightFont=*-Regular,
-% BoldFont=*-Bold,
+% UprightFont=*-Regular,
+ BoldFont=*-Bold,
 % ItalicFont=*-RI,
 % BoldItalicFont=*-BI,
 % Mapping=tex-text
-]{Montserrat}
+]{DejaVuSans}
 % \setmonofont[
 % Extension=.ttf,
 % UprightFont=*-Regular,
@@ -68,7 +68,7 @@ UprightFont=*-Regular,
 \setbeamerfont{bibliography entry author}{size=\small}
 \setbeamerfont{table}{size=\footnotesize}
 \setbeamerfont{section in head/foot}{series=\bfseries}
-\setbeamerfont{block title}{series=\bfseries, size=\small}
+\setbeamerfont{block title}{series=\bfseries, size=\normalsize}
 \setbeamerfont{block alerted title}{series=\bfseries}
 \setbeamerfont{frametitle}{series=\bfseries,size=\normalsize}
 \setbeamerfont{caption}{size=\footnotesize}
