--- a/beamerthemeinthenew.sty
+++ b/beamerthemeinthenew.sty
@@ -1,3 +1,5 @@
+\setbeamercovered{invisible}
+
 \usecolortheme{inthenew}
-%\useoutertheme{inthenew}
+\useoutertheme{inthenew}
 \usefonttheme{inthenew}
