--- a/beamerfontthemeinthenew.sty
+++ b/beamerfontthemeinthenew.sty
@@ -47,8 +47,9 @@ BoldFont=*-Bold,
 % ]{NotoSans}
 
 \renewcommand{\small}{\@setfontsize{\small}{5pt}{5pt}}
-\renewcommand{\normalsize}{\@setfontsize{\normalsize}{10pt}{10pt}}
 \renewcommand{\footnotesize}{\@setfontsize{\footnotesize}{8pt}{8pt}}
+\renewcommand{\normalsize}{\@setfontsize{\normalsize}{10pt}{10pt}}
+\renewcommand{\large}{\@setfontsize{\large}{18pt}{18pt}}
 
 \setbeamerfont{note page}{size=\small}
 \setbeamerfont{tiny structure}{family=\sffamily}
