--- a/beamerouterthemeinthenew.sty
+++ b/beamerouterthemeinthenew.sty
@@ -39,7 +39,9 @@
 %% Itemize
 \setbeamertemplate{itemize item}{$\rightarrow$}
 \setbeamercolor{itemize item}{fg=black}
-
+\setbeamertemplate{itemize subitem}{–}
+\setbeamercolor{itemize subitem}{fg=black}
+\setbeamertemplate{itemize/enumerate subbody begin}{\normalsize}
 %% Frame
 
 \setbeamercolor{frametitle} {
