dev: add new template files

--- a/beamerouterthemeinthenew.sty
+++ b/beamerouterthemeinthenew.sty
@@ -36,17 +36,11 @@
   fg=gray
 }
 
-%% Itemize
-\setbeamertemplate{itemize item}{$\rightarrow$}
-\setbeamercolor{itemize item}{fg=black}
-\setbeamertemplate{itemize subitem}{–}
-\setbeamercolor{itemize subitem}{fg=black}
-\setbeamertemplate{itemize/enumerate subbody begin}{\normalsize}
 %% Frame
 
-\setbeamercolor{frametitle} {
-  fg=black
-}
+% \setbeamercolor{frametitle} {
+%   fg=black
+% }
 
 
 % \setbeamertemplate{frametitle}{
