--- a/beamercolorthemeinthenew.sty
+++ b/beamercolorthemeinthenew.sty
@@ -1,5 +1,8 @@
 \definecolor{lmugreen}{RGB}{0,136,58}
+\definecolor{lmugray}{RGB}{245,245,245}
+\definecolor{lmublack}{RGB}{35,35,35}
 
 
 \setbeamercolor{title page header}{fg=lmugreen}
 \setbeamercolor{author}{fg=lmugreen}
+\setbeamercolor{footline}{fg=lmublack,bg=lmugray}
