--- a/beamerfontthemeinthenew.sty
+++ b/beamerfontthemeinthenew.sty
@@ -71,8 +71,8 @@ BoldFont=*-Bold,
 \setbeamerfont{section in head/foot}{series=\bfseries}
 \setbeamerfont{block title}{series=\bfseries, size=\normalsize}
 \setbeamerfont{block alerted title}{series=\bfseries}
-\setbeamerfont{frametitle}{series=\bfseries,size=\normalsize}
+\setbeamerfont{frametitle}{series=\bfseries,size=\large}
 \setbeamerfont{caption}{size=\footnotesize}
 \setbeamerfont{caption name}{size=\footnotesize}
-
+\setbeamerfont{footline}{size*={5}{0.2}}
 %%
