--- a/beamerouterthemeinthenew.sty
+++ b/beamerouterthemeinthenew.sty
@@ -19,6 +19,7 @@
 
 %% footer
 \setbeamertemplate{footline}{%
+\begin{beamercolorbox}{footline}
   \hrule
   \vspace*{1mm}
   \hspace*{3mm}
@@ -27,21 +28,10 @@
   \insertsection,\ Slide\ \insertframenumber$\ /\ $\insertmainframenumber
   \hspace*{3mm}
   \vspace*{1mm}
-}
-\setbeamerfont{footline}{
-  size*={5}{0.2},
-  shape=\itshape
-}
-\setbeamercolor{footline}{
-  fg=gray
+\end{beamercolorbox}
 }
 
 %% Frame
-
-% \setbeamercolor{frametitle} {
-%   fg=black
-% }
-
 
 % \setbeamertemplate{frametitle}{
 %   \vspace*{2mm}
