--- a/praesi.tex
+++ b/praesi.tex
@@ -1,4 +1,4 @@
-% Created 2022-05-24 Tue 15:27
+% Created 2022-05-24 Tue 18:20
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169,table]{beamer}
 \usepackage[utf8]{inputenc}
@@ -25,7 +25,7 @@
 \usepackage{tabularx}
 \setbeamercovered{transparent}
 \renewcommand{\arraystretch}{1.4}
-\hypersetup{colorlinks=true,linkcolor=gray,urlcolor=cyan,citecolor=black,}
+\hypersetup{colorlinks=true,linkcolor=black,urlcolor=cyan,citecolor=black,}
 \usepackage{diagbox}
 \usepackage{siunitx}
 \usepackage{float}
@@ -57,8 +57,8 @@
 
 
 \section{Introduction}
-\label{sec:orgf926d50}
-\begin{frame}[label={sec:orga0810c1}]{Introduction}
+\label{sec:org21ac092}
+\begin{frame}[label={sec:org579c336}]{Introduction}
 \begin{itemize}
 \item Some bullet points
 \item second bullet point
@@ -66,7 +66,36 @@
 \item Third bullet point
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orge8c6727},bigword]{Testframe}
-Hi
+\begin{frame}[label={sec:org573197a},twocolumns]{Testframe}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{itemize}
+\item column 1
+\item lala
+\end{itemize}
+\end{column}
+\begin{column}{0.5\columnwidth}
+\begin{itemize}
+\item Hialeah
+\item hi
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:org0555aa5}]{NEW test}
+\begin{columns}
+\begin{column}{0.7\columnwidth}
+\begin{itemize}
+\item Oneal
+\item two<<
+\end{itemize}
+\end{column}
+\begin{column}{0.3\columnwidth}
+\begin{itemize}
+\item Oneal
+\item two<<
+\end{itemize}
+\end{column}
+\end{columns}
 \end{frame}
 \end{document}
