--- a/beamerfontthemeinthenew.sty
+++ b/beamerfontthemeinthenew.sty
@@ -45,11 +45,18 @@ BoldFont=*-Bold,
 % UprightFont=*-Regular,
 % BoldFont=*-Bold
 % ]{NotoSans}
+\setmonofont[
+Extension=.ttf,
+%UprightFont=*-Regular,
+BoldFont=*-Bold,
+%ItalicFont=*-MI,
+%Mapping=tex-text
+]{DejaVuSans}
 
 \renewcommand{\small}{\@setfontsize{\small}{5pt}{5pt}}
 \renewcommand{\footnotesize}{\@setfontsize{\footnotesize}{8pt}{8pt}}
 \renewcommand{\normalsize}{\@setfontsize{\normalsize}{10pt}{10pt}}
-\renewcommand{\large}{\@setfontsize{\large}{18pt}{18pt}}
+\renewcommand{\large}{\@setfontsize{\large}{13pt}{13pt}}
 
 \setbeamerfont{note page}{size=\small}
 \setbeamerfont{tiny structure}{family=\sffamily}
