--- a/beamerouterthemeinthenew.sty
+++ b/beamerouterthemeinthenew.sty
@@ -2,15 +2,18 @@
 \setbeamertemplate{title page}{
   \usebeamerfont{title}
   \centering
-  \inserttitle \\
-  \vspace*{5mm}
-  {\usebeamercolor*[fg]{minor}\insertauthor} \\
-  \vspace*{3mm}
-  {\usebeamercolor*[fg]{minor}\insertdate} \\
+  \vspace*{15mm}
+  \textbf\inserttitle \\
+  \vspace*{9mm}
+  \footnotesize{\usebeamercolor*[fg]{minor}\insertauthor} \\
+  \vspace*{10mm}
+  \footnotesize{\usebeamercolor*[fg]{minor}\insertdate} \\
+  \vspace*{10mm}
+  \begin{center}
+  \includegraphics[width=0.5\textwidth]{/home/t/Theresa.Diefenbach/phd/beamertemplate/titlelogos.png}
+  \end{center}
 }
-\setbeamerfont{title}{
-  size*={18}{1}
-}
+
 
 \setbeamercolor{minor} {
   fg=gray
